fix: 연동 작업 목록 조회 기능의 필터 오류 수정